# linux_process_analyzer

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SCHEMA.md  SECURITY.md  configuration.config  make.sh  makeAll.sh
.github/workflows/: ci-arm.yml  ci.yml
code/: CMakeLists.txt  make.sh  makeAll.sh  process_analyzer.c
code/args_parser/: args_parser.c  args_parser.h
code/compression/: compression_worker.c  compression_worker.h
code/config/: config.c  config.h
code/process_snapshot/: process_snapshot.c  process_snapshot.h
code/process_stats/: process_stats.c  process_stats.h
dashboard/: index.html  records.html
python_analyzers/: dependencies.txt  rss_for_process.py
tests/: CMakeLists.txt  test_args_parser.c  test_config.c  test_process_snapshot.c  test_process_stats.c
tests/integration/: common.sh  run_all.sh  test_basic_run.sh  test_compression.sh  test_cpu_load_benchmark.sh  test_double_instance.sh  test_fd_metrics.sh  test_filter_by_name.sh  test_infinity_terminate.sh  test_invalid_config.sh  test_rotation.sh  test_stress_cpu.sh  test_stress_disk_io.sh  test_stress_rss.sh
tests/test_data/: invalid.conf  valid.conf
tests/unit_tests/: CMakeLists.txt  test_args_parser.c  test_compression.c  test_config.c  test_process_snapshot.c  test_process_stats.c
tests/unit_tests/test_data/: valid.conf
